--- a/architecte-cloud.html
+++ b/architecte-cloud.html
@@ -65,7 +65,7 @@
                     <h3>Migration & transformation cloud</h3>
                     <p>Migrer des workloads on-premise vers le cloud (lift & shift, refactor, replatforming). é‰tude
                         d'impacts, plan de migration, rollback. Straté©gies de conteneurisation ou refonte.
-                        Interopé©rabilité© avec systé¨mes existants.</p>
+                        Interopé©rabilité© avec systémes existants.</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Ops, exploitation & monitoring</h3>
@@ -104,7 +104,7 @@
                         <li>Piloter les migrations vers le cloud (lift & shift, refactor, replatforming)</li>
                         <li>Automatiser les dé©ploiements via Infrastructure as Code et pipelines CI/CD</li>
                         <li>Superviser les performances et la sé©curité© cloud (monitoring, alerting, IAM, audits)</li>
-                        <li>Assurer l'interopé©rabilité© entre cloud et systé¨mes legacy</li>
+                        <li>Assurer l'interopé©rabilité© entre cloud et systémes legacy</li>
                         <li>Accompagner les é©quipes techniques et animer des ateliers d'architecture cloud</li>
                     </ul>
                 </div>
