--- a/architecte-devops.html
+++ b/architecte-devops.html
@@ -72,9 +72,9 @@
                         traces distribuées, alerting. Mesure des indicateurs SLO / SLA.</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>securité & conformitàDevSecOps</h3>
+                    <h3>securité & conformité DevSecOps</h3>
                     <p>Intégrer la securité dé¨s le pipeline (SAST, DAST, checks). Gestion des secrets, IAM, chiffrement.
-                        Contré´le des accés , audits, conformità(RGPD, etc.).</p>
+                        Contré´le des accés , audits, conformité (RGPD, etc.).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Travail collaboratif & culture DevOps</h3>
