--- a/architecte-observabilite.html
+++ b/architecte-observabilite.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>Intégration & interopérabilité</h3>
-                    <p>Intégration avec les systé¨mes existants (APIs, microservices, middleware). Interopérabilitàentre
+                    <p>Intégration avec les systémes existants (APIs, microservices, middleware). Interopérabilitàentre
                         différents outils d'observabilité. Approche découplée : ingestion via agents, sidecars, agents
                         externes.</p>
                 </div>
@@ -76,7 +76,7 @@
                         liés au stockage et traitement des données.</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>securité & conformitàde la télémétrie</h3>
+                    <h3>securité & conformité de la télémétrie</h3>
                     <p>Chiffrement des pipelines, gestion des accés  (IAM). Masquage des données sensibles dans les logs
                         et traces. Respect des contraintes légales ou réglementaires (RGPD, confidentialité).</p>
                 </div>
@@ -105,7 +105,7 @@
                             outils (Prometheus, Grafana, ELK, Jaeger€¦)</li>
                         <li>Mettre en place l'instrumentation distribuée dans les applications, microservices et
                             environnements cloud</li>
-                        <li>Intégrer les systé¨mes existants et assurer l'interopérabilitàentre les outils</li>
+                        <li>Intégrer les systémes existants et assurer l'interopérabilitàentre les outils</li>
                         <li>Superviser les données de télémétrie, créer des dashboards, alertes et analyser les
                             anomalies</li>
                         <li>Optimiser la résilience, la performance et les coé»ts liés é la collecte et au stockage des
@@ -124,7 +124,7 @@
                         <li>Une Capacitévulgariser les concepts techniques, animer des ateliers et fédérer les équipes
                         </li>
                         <li>Des qualités personnelles : leadership transverse, esprit de Synthèse, autonomie</li>
-                        <li>Une connaissance des enjeux de securité et conformità(RGPD, chiffrement, IAM)</li>
+                        <li>Une connaissance des enjeux de securité et conformité (RGPD, chiffrement, IAM)</li>
                     </ul>
                 </div>
                 <div class="rate-info">
