--- a/architecte-poste-travail.html
+++ b/architecte-poste-travail.html
@@ -60,9 +60,9 @@
                         gestion des flux.</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>securité & conformitàworkplace</h3>
-                    <p>Mise en Å“uvre de sécurités sur les postes (antivirus, EDR, MDM / EMM). Gestion des accés ,
-                        chiffrement des données sur poste. ConformitàRGPD, politiques de protection des données locales.
+                    <h3>securité & conformité workplace</h3>
+                    <p>Mise en oeuvre  de sécurités sur les postes (antivirus, EDR, MDM / EMM). Gestion des accés ,
+                        chiffrement des données sur poste. conformité RGPD, politiques de protection des données locales.
                     </p>
                 </div>
                 <div class="competence-domain">
@@ -79,7 +79,7 @@
                 <div class="competence-domain">
                     <h3>Interopérabilità& intégration SI</h3>
                     <p>Interface avec le SI central : annuaires, gestion des identités, API pour les services.
-                        Interopérabilitàavec les systé¨mes métiers. Intégration de la couche poste / device avec le
+                        Interopérabilitàavec les systémes métiers. Intégration de la couche poste / device avec le
                         backend (authentification, gestion de la configuration centrale).</p>
                 </div>
                 <div class="competence-domain">
@@ -113,17 +113,17 @@
                         <li>Superviser et maintenir en condition opérationnelle les postes (monitoring, support,
                             incidents).</li>
                         <li>Assurer l'interopérabilitàavec le SI (annuaires, API, gestion des identités).</li>
-                        <li>Accompagner la conduite du changement aupré¨s des utilisateurs et des parties prenantes.
+                        <li>Accompagner la conduite du changement auprés des utilisateurs et des parties prenantes.
                         </li>
                     </ul>
                 </div>
                 <div class="profile-requirements">
                     <h3>Ce que la personne est (compétences)</h3>
-                    <p>Le profil recherchàest :</p>
+                    <p>Le profil recherché est :</p>
                     <ul>
                         <li>Architecte expérimentà(3 é 5 ans minimum) en environnement workplace / poste de travail.
                         </li>
-                        <li>Diplômé Bac+5 en ingénierie informatique, systé¨mes & réseaux.</li>
+                        <li>Diplômé Bac+5 en ingénierie informatique, systémes & réseaux.</li>
                         <li>Expert des environnements Microsoft (Azure AD, Microsoft 365), virtualisation client, et
                             gestion de postes.</li>
                         <li>Compétent en sécurité, automatisation, supervision, et intégration SI.</li>
