--- a/architecte-securite.html
+++ b/architecte-securite.html
@@ -64,7 +64,7 @@
                 <div class="competence-domain">
                     <h3>Gestion des risques & conformité</h3>
                     <p>Évaluation des risques (méthodes : EBIOS, ISO 27005, etc.). Audit securité et remédiation.
-                        Conformitàréglementaire (RGPD, LPM, normes secteur). Qualification des fournisseurs / tiers.</p>
+                        conformité réglementaire (RGPD, LPM, normes secteur). Qualification des fournisseurs / tiers.</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Détection & réponse aux incidents</h3>
@@ -99,9 +99,9 @@
                         <li>Définir la stratégie de securité : politiques, référentiels, chartes, KPI</li>
                         <li>Concevoir des architectures sécurisées é tous les niveaux (réseau, applicatif, données,
                             cloud)</li>
-                        <li>Mettre en Å“uvre des solutions de securité réseau (pare-feu, WAF, IDS/IPS, VPN)</li>
+                        <li>Mettre en oeuvre  des solutions de securité réseau (pare-feu, WAF, IDS/IPS, VPN)</li>
                         <li>Sécuriser les applications : API, authentification, tests SAST/DAST, protection OWASP</li>
-                        <li>Gérer les risques et la conformità(RGPD, LPM, audits, qualification fournisseurs)</li>
+                        <li>Gérer les risques et la conformité (RGPD, LPM, audits, qualification fournisseurs)</li>
                         <li>Superviser la détection et la réponse aux incidents (SIEM, forensic, escalade)</li>
                         <li>Intégrer la securité dans les environnements cloud et pipelines CI/CD (DevSecOps)</li>
                         <li>Animer des ateliers, vulgariser les concepts et piloter la gouvernance sécurité</li>
