--- a/architecte-solution-ia.html
+++ b/architecte-solution-ia.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>Intégration & interopérabilité</h3>
-                    <p>Interfaces API, microservices, connecteurs avec systé¨mes existants. Interopérabilitàavec
+                    <p>Interfaces API, microservices, connecteurs avec systémes existants. Interopérabilitàavec
                         l'architecture SI existante. Intégration de l'IA dans les processus métiers.</p>
                 </div>
             </div>
