--- a/architecte-solution.html
+++ b/architecte-solution.html
@@ -81,8 +81,8 @@
                     <ul>
                         <li>Concevoir des solutions techniques cohérentes avec l'urbanisation du SI</li>
                         <li>Définir la cible d'architecture, les trajectoires et les arbitrages techniques</li>
-                        <li>Assurer l'intégration inter-systé¨mes via API, ESB, messaging, data flows</li>
-                        <li>Mettre en Å“uvre des pratiques DevSecOps : CI/CD, automatisation, securité by design</li>
+                        <li>Assurer l'intégration inter-systémes via API, ESB, messaging, data flows</li>
+                        <li>Mettre en oeuvre  des pratiques DevSecOps : CI/CD, automatisation, securité by design</li>
                         <li>Modéliser les solutions (UML, BPMN, ArchiMate) et appliquer les bonnes pratiques</li>
                         <li>Accompagner les projets de transformation SI dans des environnements é maturitàtechnique
                             variable</li>
