--- a/expert-integration.html
+++ b/expert-integration.html
@@ -42,7 +42,7 @@
                 <div class="competence-domain">
                     <h3>Intégration applicative & middleware</h3>
                     <p>maîtrise des bus d'intégration (ESB), API / API Gateway, orchestration. Gestion des flux
-                        inter-systé¨mes (synchrones/asynchrones). Message brokers (Kafka, RabbitMQ, JMS). Connaissance
+                        inter-systémes (synchrones/asynchrones). Message brokers (Kafka, RabbitMQ, JMS). Connaissance
                         des patterns d'intégration (publish/subscribe, event-driven, batching, CQRS).</p>
                 </div>
                 <div class="competence-domain">
@@ -53,8 +53,8 @@
                 </div>
                 <div class="competence-domain">
                     <h3>Connectività& interopérabilité</h3>
-                    <p>Connecteurs vers systé¨mes externes (ERP, CRM, SAP, bases de données, services SaaS).
-                        Interopérabilitàentre solutions hétérogé¨nes (legacy, microservices, cloud). Gestion des API,
+                    <p>Connecteurs vers systémes externes (ERP, CRM, SAP, bases de données, services SaaS).
+                        Interopérabilitàentre solutions hetérogénes (legacy, microservices, cloud). Gestion des API,
                         versioning, contrats.</p>
                 </div>
                 <div class="competence-domain">
@@ -82,12 +82,12 @@
                     <h3>Ce que l'on attend de la personne (type de mission)</h3>
                     <p>L'Expert en Intégration est chargàde :</p>
                     <ul>
-                        <li>Concevoir et mettre en Å“uvre des solutions d'intégration entre systé¨mes internes,
+                        <li>Concevoir et mettre en oeuvre  des solutions d'intégration entre systémes internes,
                             externes, cloud et legacy</li>
-                        <li>Gérer les flux inter-systé¨mes via bus d'intégration, API Gateway, message brokers (Kafka,
+                        <li>Gérer les flux inter-systémes via bus d'intégration, API Gateway, message brokers (Kafka,
                             RabbitMQ€¦)</li>
-                        <li>Assurer la connectivitàet l'interopérabilitàentre applications hétérogé¨nes</li>
-                        <li>Sécuriser les échanges, garantir la conformità(RGPD, securité applicative)</li>
+                        <li>Assurer la connectivitàet l'interopérabilitàentre applications hetérogénes</li>
+                        <li>Sécuriser les échanges, garantir la conformité (RGPD, securité applicative)</li>
                         <li>Optimiser la performance et la résilience des architectures d'intégration</li>
                         <li>Automatiser les déploiements via CI/CD et Infrastructure as Code</li>
                         <li>Modéliser les flux métiers et documenter les scénarios d'intégration</li>
