--- a/ingenieur-data.html
+++ b/ingenieur-data.html
@@ -68,7 +68,7 @@
                 <div class="competence-domain">
                     <h3>securité & gouvernance des données</h3>
                     <p>Masquage des données sensibles. Gestion des accés  / droits aux données (IAM).
-                        Conformitàréglementaire (RGPD).</p>
+                        conformité réglementaire (RGPD).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Déploiement & opérationnalisation</h3>
