--- a/ingenieur-iam-workplace.html
+++ b/ingenieur-iam-workplace.html
@@ -45,7 +45,7 @@
                     <h3>Stratégie & gouvernance IAM</h3>
                     <p>Participation é la définition de la politique IAM (principes d'accés , ré´les, gouvernance).
                         Définir les processus de demande / approbation / révocation d'accés . veiller a  la
-                        conformità(audit des accés , revues périodiques).</p>
+                        conformité (audit des accés , revues périodiques).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Cycle de vie des identités & gestion des droits</h3>
@@ -61,11 +61,11 @@
                 <div class="competence-domain">
                     <h3>Intégration & interopérabilité</h3>
                     <p>Connecteurs vers applications internes / externes (API, web services). Synchronisation
-                        d'identités entre systé¨mes hétérogé¨nes. Automatisation via scripts / API.</p>
+                        d'identités entre systémes hetérogénes. Automatisation via scripts / API.</p>
                 </div>
                 <div class="competence-domain">
                     <h3>securité & conformité</h3>
-                    <p>Authentification forte (MFA, biométrie). Chiffrement des données d'identité. Traé§abilitàdes
+                    <p>Authentification forte (MFA, biométrie). Chiffrement des données d'identité. Tracabilité des
                         actions (logs). Respect du RGPD / contré´le des accés .</p>
                 </div>
                 <div class="competence-domain">
@@ -81,7 +81,7 @@
                 <div class="competence-domain">
                     <h3>Soft skills & communication</h3>
                     <p>Collaboration entre sécurité, DSI et métiers. Animation d'ateliers IAM. Capacitévulgariser les
-                        sujets IAM aupré¨s de non spécialistes.</p>
+                        sujets IAM auprés de non spécialistes.</p>
                 </div>
             </div>
         </section> <!-- Section Fiche de Poste -->
@@ -98,13 +98,13 @@
                     <h3>Ce que l'on attend de la personne (missions)</h3>
                     <p>L'ingénieur IAM est chargàde :</p>
                     <ul>
-                        <li>Définir et mettre en Å“uvre la stratégie IAM : politiques d'accés , gouvernance, processus
-                            de demande/approbation/révocation, conformitàet audits.</li>
+                        <li>Définir et mettre en oeuvre  la stratégie IAM : politiques d'accés , gouvernance, processus
+                            de demande/approbation/révocation, conformité et audits.</li>
                         <li>Gérer le cycle de vie des identités : provisioning automatique, gestion des droits (RBAC,
                             ABAC), audits et séparation des té¢ches (SoD).</li>
                         <li>Intégrer et exploiter les plateformes IAM : solutions comme SailPoint, ForgeRock, Okta,
                             Microsoft Entra, avec AD/Azure AD/LDAP.</li>
-                        <li>Assurer la securité des accés  : MFA, chiffrement, traé§abilité, conformitàRGPD.</li>
+                        <li>Assurer la securité des accés  : MFA, chiffrement, traçabilité , conformité RGPD.</li>
                         <li>Superviser et maintenir les opérations IAM : support, mises é jour, correctifs, évolutions.
                         </li>
                         <li>Automatiser les processus IAM : scripting, Infrastructure as Code, CI/CD.</li>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="profile-requirements">
                     <h3>Ce que la personne est (compétences)</h3>
-                    <p>Le profil recherchàest :</p>
+                    <p>Le profil recherché est :</p>
                     <ul>
                         <li>Ingénieur expérimentà(3 é 5 ans ou plus) en IAM ou securité des accés .</li>
                         <li>Diplômé Bac+5 en informatique ou cybersécurité.</li>
@@ -122,7 +122,7 @@
                             Connect, SCIM).</li>
                         <li>Compétent en scripting (Python, PowerShell), automatisation et DevOps.</li>
                         <li>Connaissance approfondie des environnements Microsoft (AD, Azure AD).</li>
-                        <li>Doté de soft skills : communication transverse, pédagogie, Capacitéanimer et convaincre.
+                        <li>Doté de soft skills : communication transverse, pédagogie, Capacité à animer et convaincre.
                         </li>
                         <li>Certifications IAM ou securité appréciées.</li>
                     </ul>
