--- a/ingenieur-mlops.html
+++ b/ingenieur-mlops.html
@@ -65,14 +65,14 @@
                         Prometheus, etc.).</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>securité & conformitàML / IA</h3>
+                    <h3>securité & conformité ML / IA</h3>
                     <p>securité des modé¨les et des données (chiffrement, accés  contré´lé). Respect de la
-                        confidentialité, RGPD, anonymisation. Auditabilitàet traé§abilitàdes modé¨les. Robustesse
+                        confidentialité, RGPD, anonymisation. Auditabilitàet Tracabilité des modé¨les. Robustesse
                         (adversarial, validation).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Intégration & interopérabilité</h3>
-                    <p>Connecteurs vers les systé¨mes existants (bases de données, API métier, flux de données).
+                    <p>Connecteurs vers les systémes existants (bases de données, API métier, flux de données).
                         Interopérabilitàentre modules de pipeline et services. Synchronisation entre pipelines ML et
                         pipelines d'ingénierie / devops.</p>
                 </div>
