--- a/ingenieur-reseau-cloud.html
+++ b/ingenieur-reseau-cloud.html
@@ -102,7 +102,7 @@
                             Pulumi)</li>
                         <li>Mettre en place des pipelines CI/CD intégrant qualité, securité et tests</li>
                         <li>Superviser la performance réseau : monitoring, alerting, logs, métriques</li>
-                        <li>Assurer la securité et la conformità: IAM, chiffrement, segmentation, RGPD</li>
+                        <li>Assurer la securité et la conformité : IAM, chiffrement, segmentation, RGPD</li>
                         <li>Piloter les migrations vers le cloud, interconnecter les environnements et intégrer les API
                             / bus de messagerie</li>
                     </ul>
