--- a/ingenieur-securite.html
+++ b/ingenieur-securite.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <h2>Évaluation Technique</h2>
                 <div class="competence-domain">
-                    <h3>Gouvernance, conformità& normes</h3>
+                    <h3>Gouvernance, conformité & normes</h3>
                     <p>Connaissance des normes / référentiels : ISO 27001, NIST, ISO 27005, NIS2, RGPD. Mise en place de
                         politiques de sécurité, chartes, audit sécurité. Analyse de risques, traitement des risques.
                         Qualification tiers / securité des fournisseurs. Reporting, indicateurs de sécurité.</p>
@@ -93,7 +93,7 @@
                     <p>L'Ingénieur en securité est chargàde :</p>
                     <ul>
                         <li>Mettre en place la gouvernance securité : politiques, chartes, audits, reporting</li>
-                        <li>Assurer la securité des systé¨mes : réseau, infrastructure, applicatif, API, IAM</li>
+                        <li>Assurer la securité des systémes : réseau, infrastructure, applicatif, API, IAM</li>
                         <li>Réaliser des tests d'intrusion, audits de code, analyse des vulnérabilités</li>
                         <li>Superviser la securité opérationnelle : SIEM, alerting, forensic, réponse aux incidents</li>
                         <li>Sécuriser les environnements cloud (AWS, Azure, GCP) et les architectures hybrides</li>
