--- a/responsable-continuite.html
+++ b/responsable-continuite.html
@@ -80,7 +80,7 @@
                         documentaire.</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>Conformità& réglementation</h3>
+                    <h3>conformité & réglementation</h3>
                     <p>Connaissance des normes / standards (ISO 22301, référentiels BCM). Respect des obligations
                         légales ou sectorielles. Interface avec les audits, les assurances, les obligations
                         réglementaires.</p>
@@ -107,7 +107,7 @@
                             équipes</li>
                         <li>Coordonner les cellules de crise, gérer les incidents et la reprise des activités</li>
                         <li>Suivre les indicateurs de résilience, auditer et mettre é jour les référentiels</li>
-                        <li>Assurer la conformitàréglementaire et l'interface avec les audits et assurances</li>
+                        <li>Assurer la conformité réglementaire et l'interface avec les audits et assurances</li>
                     </ul>
                 </div>
                 <div class="profile-requirements">
@@ -118,7 +118,7 @@
                         <li>Une expérience significative (5 é 10 ans) en continuité d'activité, gestion de crise ou BCM
                         </li>
                         <li>Une maîtrise des normes et référentiels : ISO 22301, CBCP, BCM standards</li>
-                        <li>Des compétences en systé¨mes d'information, infrastructure, et interconnexion IT/métier</li>
+                        <li>Des compétences en systémes d'information, infrastructure, et interconnexion IT/métier</li>
                         <li>Des qualités personnelles : leadership transverse, rigueur, anticipation, gestion du stress
                         </li>
                         <li>Une Capacitéfédérer les acteurs, vulgariser les enjeux et piloter les plans de continuité
