--- a/responsable-gouvernance.html
+++ b/responsable-gouvernance.html
@@ -52,8 +52,8 @@
                         responsabilités (RACI, chartes).</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>Risque, conformità& contré´le</h3>
-                    <p>Gouvernance de la conformitàréglementaire (RGPD, normes sectorielles). Gestion des risques IT /
+                    <h3>Risque, conformité & contré´le</h3>
+                    <p>Gouvernance de la conformité réglementaire (RGPD, normes sectorielles). Gestion des risques IT /
                         sécurité, pilotage des audits. Mise en place de contré´les internes et de processus de revue
                         périodique.</p>
                 </div>
@@ -91,7 +91,7 @@
                         <li>Mettre en place un schéma directeur de gouvernance</li>
                         <li>Animer les comités de pilotage et d'architecture</li>
                         <li>Suivre les indicateurs de performance, conformité, risques</li>
-                        <li>Gérer les risques IT, la conformitàréglementaire (RGPD, audits)</li>
+                        <li>Gérer les risques IT, la conformité réglementaire (RGPD, audits)</li>
                         <li>Formaliser et optimiser les processus (demande, changement, services)</li>
                         <li>Assurer la qualitàet la cohérence des projets avec les standards définis</li>
                     </ul>
