--- a/specialiste-iam.html
+++ b/specialiste-iam.html
@@ -62,19 +62,19 @@
                 <div class="competence-domain">
                     <h3>Intégration & interopérabilité</h3>
                     <p>Connecteurs vers applications internes / externes (API, web services, applications métier).
-                        Interopérabilitàavec d'autres systé¨mes de securité (SIEM, outils de logs). Automatisations via
+                        Interopérabilitàavec d'autres systémes de securité (SIEM, outils de logs). Automatisations via
                         scripts ou API pour synchronisation des identités.</p>
                 </div>
                 <div class="competence-domain">
                     <h3>securité & conformité</h3>
                     <p>Authentification forte (MFA, biométrie, PKI). Chiffrement des données & sécurisation des
-                        communications. Contré´le d'accés  (RBAC, ABAC). Conformitàréglementaire (RGPD, normes secteur).
+                        communications. Contré´le d'accés  (RBAC, ABAC). conformité réglementaire (RGPD, normes secteur).
                     </p>
                 </div>
                 <div class="competence-domain">
                     <h3>Opérations & support IAM</h3>
                     <p>Déploiement, maintenance, supervision des services IAM. Support des incidents, analyses
-                        d'anomalies. Surveillance des accés , journaux, traé§abilité. Tests, mises é jour, correctifs et
+                        d'anomalies. Surveillance des accés , journaux, traçabilité . Tests, mises é jour, correctifs et
                         évolutions.</p>
                 </div>
                 <div class="competence-domain">
@@ -107,10 +107,10 @@
                         <li>Définir la stratégie IAM : politiques d'accés , ré´les, principes de moindre privilé¨ge</li>
                         <li>Gérer le cycle de vie des identités : provisioning, modification, révocation, audits</li>
                         <li>Déployer et maintenir les solutions IAM / IGA (SailPoint, ForgeRock, Okta, Azure AD€¦)</li>
-                        <li>Assurer l'intégration avec les systé¨mes internes et externes via API, annuaires,
+                        <li>Assurer l'intégration avec les systémes internes et externes via API, annuaires,
                             connecteurs</li>
-                        <li>Garantir la securité et la conformità: MFA, chiffrement, RBAC/ABAC, RGPD</li>
-                        <li>Superviser les opérations IAM : incidents, journaux, traé§abilité, mises é jour</li>
+                        <li>Garantir la securité et la conformité : MFA, chiffrement, RBAC/ABAC, RGPD</li>
+                        <li>Superviser les opérations IAM : incidents, journaux, traçabilité , mises é jour</li>
                         <li>Automatiser les processus IAM via scripting et intégration CI/CD</li>
                     </ul>
                 </div>
