--- a/sre.html
+++ b/sre.html
@@ -63,8 +63,8 @@
                         validations. Déploiements blue/green, canary, rolling updates.</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>Systé¨mes & infrastructure</h3>
-                    <p>maîtrise des systé¨mes UNIX / Linux. Connaissances réseaux (TCP/IP, DNS, load balancers, etc.).
+                    <h3>systémes & infrastructure</h3>
+                    <p>maîtrise des systémes UNIX / Linux. Connaissances réseaux (TCP/IP, DNS, load balancers, etc.).
                         Expérience en cloud (AWS / Azure / GCP) et en environnements hybrides. Containers &
                         orchestration (Docker, Kubernetes).</p>
                 </div>
@@ -98,7 +98,7 @@
                     <h3>Ce que l'on attend de la personne (type de mission)</h3>
                     <p>Le SRE est chargàde :</p>
                     <ul>
-                        <li>Concevoir des systé¨mes fiables et résilients, avec des architectures tolérantes aux pannes
+                        <li>Concevoir des systémes fiables et résilients, avec des architectures tolérantes aux pannes
                             et des plans de continuité</li>
                         <li>Définir et suivre les indicateurs de fiabilità(SLO, SLA, SLI) et gérer le budget d'erreur
                         </li>
@@ -108,7 +108,7 @@
                         <li>Superviser les pipelines CI/CD, intégrer les tests et déploiements progressifs (blue/green,
                             canary€¦)</li>
                         <li>Gérer les incidents critiques, assurer la restauration rapide et l'analyse post-mortem</li>
-                        <li>Intégrer la securité opérationnelle dans les systé¨mes et garantir la conformité</li>
+                        <li>Intégrer la securité opérationnelle dans les systémes et garantir la conformité</li>
                     </ul>
                 </div>
                 <div class="profile-requirements">
@@ -117,7 +117,7 @@
                     <ul>
                         <li>Une expérience de 3 é 5 ans ou plus en DevOps, opérations ou ingénierie fiabilité</li>
                         <li>Une formation Bac+5 en informatique ou ingénierie</li>
-                        <li>Une maîtrise des systé¨mes Linux/Unix, réseaux, cloud (AWS, Azure, GCP), conteneurs
+                        <li>Une maîtrise des systémes Linux/Unix, réseaux, cloud (AWS, Azure, GCP), conteneurs
                             (Docker, Kubernetes)</li>
                         <li>Des compétences en monitoring, alerting, instrumentation, et analyse RCA</li>
                         <li>Une Capacitéautomatiser les té¢ches, gérer les incidents et optimiser la disponibilité
