--- a/urbaniste-si.html
+++ b/urbaniste-si.html
@@ -73,7 +73,7 @@
                 <div class="experience-section">
                     <h3>Expérience & formation</h3>
                     <ul>
-                        <li>Niveau Bac +5 en informatique, architecture des systé¨mes d'information ou équivalent</li>
+                        <li>Niveau Bac +5 en informatique, architecture des systémes d'information ou équivalent</li>
                         <li>Expérience significative (7 ans ou plus) dans des fonctions d'urbanisation, d'architecture
                             ou de transformation SI</li>
                         <li>Certifications en urbanisme SI ou architecture (référentiel CIGREF, etc.)</li>
@@ -113,7 +113,7 @@
                         </li>
                         <li>Une maîtrise des technologies d'intégration (API, middleware, cloud, bus)</li>
                         <li>Des compétences en modélisation, documentation des flux et interopérabilité</li>
-                        <li>Une Capacitévulgariser l'urbanisme SI aupré¨s des métiers</li>
+                        <li>Une Capacitévulgariser l'urbanisme SI auprés des métiers</li>
                         <li>Des qualités personnelles : esprit de Synthèse, vision globale, diplomatie, autonomie</li>
                         <li>Une bonne maîtrise de l'anglais pour la documentation technique</li>
                     </ul>
