--- a/ingenieur-reseau-cloud.html
+++ b/ingenieur-reseau-cloud.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>Interfaçage & intégration</h3>
-                    <p>Connaissance des API, bus, services de messagerie (Kafka, RabbitMQ€¦). Connectivitàhybride (VPN,
+                    <p>Connaissance des API, bus, services de messagerie (Kafka, RabbitMQ€¦). Connectivité hybride (VPN,
                         ExpressRoute, peering, intercloud).</p>
                 </div>
             </div>
