--- a/responsable-continuite.html
+++ b/responsable-continuite.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="rate-info">
                     <h3>Taux Journalier Moyen (TJM)</h3>
-                    <p class="rate">400 é jour HT‚jour HT</p>
+                    <p class="rate">400 Euro‚jour HT</p>
                 </div>
                 <div class="contact-section">
                     <h3>Intéressé(e) par cette opportunità?</h3>
