--- a/expert-integration.html
+++ b/expert-integration.html
@@ -52,7 +52,7 @@
                         Protocoles d'échange (REST, SOAP, XML, JSON, JMS, AMQP).</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>Connectività& interopérabilité</h3>
+                    <h3>Connectivité & interopérabilité</h3>
                     <p>Connecteurs vers systémes externes (ERP, CRM, SAP, bases de données, services SaaS).
                         Interopérabilitàentre solutions hetérogénes (legacy, microservices, cloud). Gestion des API,
                         versioning, contrats.</p>
@@ -86,7 +86,7 @@
                             externes, cloud et legacy</li>
                         <li>Gérer les flux inter-systémes via bus d'intégration, API Gateway, message brokers (Kafka,
                             RabbitMQ€¦)</li>
-                        <li>Assurer la connectivitàet l'interopérabilitàentre applications hetérogénes</li>
+                        <li>Assurer la Connectivité et l'interopérabilitàentre applications hetérogénes</li>
                         <li>Sécuriser les échanges, garantir la conformité (RGPD, securité applicative)</li>
                         <li>Optimiser la performance et la résilience des architectures d'intégration</li>
                         <li>Automatiser les déploiements via CI/CD et Infrastructure as Code</li>
